{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 21,
  "lineage": "a0f91944-5ca1-50cb-a184-0c7e5da34fc4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:subnet/subnet-05d7dc57b559baa8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 58,
            "cidr_block": "15.9.97.0/26",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "kofra-public-subnet"
                ]
              }
            ],
            "id": "subnet-05d7dc57b559baa8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "708113109960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "kofra-public-subnet"
            },
            "vpc_id": "vpc-0f2cdbc6a33637627"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:vpc/vpc-0f2cdbc6a33637627",
            "cidr_block": "15.9.97.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e8cf1467aa7b0954",
                "cidr_block": "15.9.97.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0e2f66217ab8d5ccf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "KofraVPC"
                ]
              }
            ],
            "id": "vpc-0f2cdbc6a33637627",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09d69ff5a337b3d10",
            "owner_id": "708113109960",
            "tags": {
              "Name": "KofraVPC",
              "vpc-id": "kofra_vpc_01"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group/sg-0025d3546bb30ae58",
            "description": "Allow SSH inbound  and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "15.9.97.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0025d3546bb30ae58",
            "ingress": [
              {
                "cidr_blocks": [
                  "15.9.97.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kofra-ssh-security-group",
            "name_prefix": "",
            "owner_id": "708113109960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kofra_allow_ssh"
            },
            "tags_all": {
              "Name": "kofra_allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2cdbc6a33637627"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_ssh_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group-rule/sgr-04114f7a4e7e84959",
            "cidr_ipv4": "15.9.97.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-04114f7a4e7e84959",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0025d3546bb30ae58",
            "security_group_rule_id": "sgr-04114f7a4e7e84959",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group-rule/sgr-0a6f079268edcb05d",
            "cidr_ipv4": "15.9.97.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a6f079268edcb05d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0025d3546bb30ae58",
            "security_group_rule_id": "sgr-0a6f079268edcb05d",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "data.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}